--- a/Client/Conferma/src/css/attivazione.css
+++ b/Client/Conferma/src/css/attivazione.css
@@ -31,7 +31,7 @@
 
 .linea2{
   position: absolute;
-  top: 75%;
+  top: 84%;
   width: 100%;
 }
 
@@ -56,16 +56,16 @@
 .input1{
   background-color: #eee ;
   left: 0%;
-  width: 60%;
+  width: 108%;
   align-items: center;
   text-align: center;
-  padding-left: 12px;
-  padding-right: 12px;
+  padding-left: 8px;
+  padding-right: 8px;
   padding-top: 5px;
   padding-bottom: 5px;
   border-radius: 5px;
   margin-bottom: 13px;
-  margin-left: 3%;
+  margin-left: 0%;
   font-family: 'Inter', sans-serif;
   font-weight: 600;
   font-size: 20px;
@@ -102,7 +102,7 @@
   text-align: center;
 }
 
-.orari{
+.giorni{
   margin-top: 20%;
   font-family: 'Inter', sans-serif;
   font-weight: 600;
@@ -116,27 +116,27 @@
 }
 
 
-.dalle{
+.fine{
   margin-top: 12%;
   font-family: 'Inter', sans-serif;
   font-weight: 600;
   font-size: 24px;
   width: 40%;
-  margin-left: 10%;
+  margin-left: 0%;
 }
 
-.alle{
+.inizio{
   position: absolute;
   margin-top: 12%;
   font-family: 'Inter', sans-serif;
   font-weight: 600;
   font-size: 24px;
-  margin-left: 55%;
+  margin-left: 50%;
   width: 40%;
 }
 
 
-.legendaOrari{
+.legendaGiorni{
   position: absolute;
   font-family: 'Inter', sans-serif;
   font-weight: 600;
@@ -154,6 +154,18 @@
   display: flex;
   left: 50%;
   transform: translateX(-50%);
+}
+
+.containerOrari {
+  font-family: 'Inter', sans-serif;
+  font-weight: 600;
+  font-size: 20px;
+  position: absolute;
+  width: 100%;
+  display: flex;
+  left: 50%;
+  transform: translateX(-50%);
+  margin-top: 55%
 }
 
 select{
@@ -186,11 +198,20 @@ select{
   font-size: 22px;
   left: 50%;
   transform: translateX(-50%);
-  margin-top: 70%;
+  margin-top: 84%;
 }
 
 .nome{
   position: absolute;
-  margin-top: 52%;
+  margin-top: 72%;
   width: 100%;
+}
+
+.legendaOrari{
+  font-family: 'Inter', sans-serif;
+  width: auto;
+  font-weight: 600;
+  font-size: 24px;
+  text-align: center;
+  display: flex;
 }
